more elegant way to fix the sidebar flickering issue

--- a/test_app/public/stylesheets/interpret_style.css
+++ b/test_app/public/stylesheets/interpret_style.css
@@ -536,3 +536,7 @@ tbody td a {
 #tree_sidebar a:hover {
   text-decoration: underline;
 }
+
+#loading_sidebar {
+  display: none;
+}
